--- a/FrontEnd/ConectaMais/src/app/cadastrar/cadastrar.component.css
+++ b/FrontEnd/ConectaMais/src/app/cadastrar/cadastrar.component.css
@@ -1,5 +1,3 @@
-
-
 #secao01 {
   /* fundo com a imagem */
   background-image: url("/assets/img/fig08.jpg");
@@ -71,3 +69,10 @@
   text-shadow: 5px 5px 20px black;
 }
 
+input:invalid {
+  border: solid red 3px;
+}
+
+input:valid {
+  border: solid green 3px;
+}
