--- a/FrontEnd/ConectaMais/src/app/cadastrar/cadastrar.component.html
+++ b/FrontEnd/ConectaMais/src/app/cadastrar/cadastrar.component.html
@@ -45,12 +45,12 @@
         </div>
         <div class="form-group" *ngIf="showBlock">
           <label for="idadeMin" class="d-flex ">Idade mínima de participantes:</label>
-          <input [(ngModel)]="usuario.idadeMin" class="form-control" type="number" name="IdadeMin" id="IdadeMin"
+          <input [(ngModel)]="usuario.idadeMin" class="form-control" type="number" min="0" name="IdadeMin" id="IdadeMin"
             placeholder="Entre com número">
         </div>
         <div class="form-group" *ngIf="showBlock">
           <label for="idadeMax" class="d-flex ">Idade máxima de participantes:</label>
-          <input [(ngModel)]="usuario.idadeMax" class="form-control" type="number" name="IdadeMax" id="IdadeMax"
+          <input [(ngModel)]="usuario.idadeMax" class="form-control" type="number" min="0" name="IdadeMax" id="IdadeMax"
             placeholder="Entre com número">
         </div>
         <div class="form-group" *ngIf="showBlock">
@@ -86,15 +86,15 @@
           <input [(ngModel)]="usuario.imagemPerfilURL" class="form-control" type="text" name="imagem " id="imagem"
             placeholder="URL da imagem">
         </div>
-        <div class="form-group">
+        <div class="form-group was-validated">
           <label for="senha" class="d-flex ">Senha:</label>
           <input (input)="confirmSenha($event)" class="form-control" type="password" name="senha " id="senha"
             placeholder="Sua senha" required>
         </div>
-        <div class="form-group">
+        <div class="form-group was-validated">
           <label for="confirmSenha" class="d-flex ">Confirme sua senha:</label>
           <input [(ngModel)]="usuario.senha" class="form-control" type="password" name="confirmSenha " id="confirmSenha"
-            placeholder="Repita a senha">
+            placeholder="Repita a senha" required>
         </div>
         <div class="d-flex justify-content-end pb-5">
           <button (click)="cadastrar()" type="submit" class="btn btn-success style-button">Cadastrar</button>
