--- a/FrontEnd/ConectaMais/src/app/feed/feed.component.html
+++ b/FrontEnd/ConectaMais/src/app/feed/feed.component.html
@@ -1,52 +1,71 @@
-<div class="container-fluid">
-    <h4 class="text-center text-white  mb-5 pt-5">Faça uma postagem para que os estudantes te encontrem.</h4>
+<div class="container-fluid" id="padrao">
+    <!-- formulario de publicação -->
+  <h4 class="text-center text-white  mb-5" style="padding-top: 135px; text-shadow: 2px 2px 4px #000000;">Faça uma
+    postagem para que os estudantes te encontrem.</h4>
 
+  <p class="text-center">
+    <button class="btn" type="button" data-toggle="collapse" data-target="#collapseExample"
+      aria-expanded="false" aria-controls="collapseExample" id="criarPost">
+      Criar nova postagem
+    </button>
+  </p>
+
+  <div class="collapse" id="collapseExample">
     <div class="row d-flex justify-content-center ">
-        <div class="col-md-10 bg-white" id="formularioPostagem">
-            <div class="form-group mx-5">
-                <label for="titulo" class="mt-5">Título</label>
-                <input class="form-control mb-2" type="text" name="titulo" id="titulo">
-                <label for="tema">Tema</label>
-                <input class="form-control mb-2" type="text" name="tema" id="tema">
-                <label for="descricao" class="">Descrição</label>
-                <textarea class="form-control mb-3" name="descricao" id="descricao" rows="5"></textarea>
-                <div class="row d-flex justify-content-end m-0">
-                    <button class="button button1">Publicar</button>
-                </div>
-            </div>
-
+      <div class="col-md-9 bg-white" id="formularioPostagem">
+        <div class="form-group mx-5">
+          <label for="titulo" class="mt-5">Título</label>
+          <input [(ngModel)]='postagem.titulo' class="form-control mb-2" type="text" name="titulo" id="titulo">
+          <label for="tema">Tema</label>
+          <select (change)='temaSelect($event)' class="form-control" name="tema" id="tema">
+            <option></option>
+            <option value="programa">Programa</option>
+            <option value="bootcamp">Bootcamp</option>
+            <option value="hackaton">Hackaton</option>
+            <option value="evento">Evento</option>
+            <option value="noticia">Noticia</option>
+          </select>
+          <label for="descricao" class="">Descrição</label>
+          <textarea [(ngModel)]='postagem.conteudoPostagem' class="form-control mb-3" name="descricao" id="descricao" rows="5"></textarea>
+          <div class="row d-flex justify-content-end m-0">
+            <button (click)='publicar()' class="button button1">Publicar</button>
+          </div>
         </div>
+
+      </div>
     </div>
-    <hr>
+  </div>
+  <!--/ formulario de publicação -->
 
-    <div class="row d-flex justify-content-center ">
-        <div class="col-md-10 bg-white" id="formularioPostagem">
-            <div class="row">
-                <div class="col-md-8 text-left pl-3 pr-0 mx-0">
-                    <h4 class="mt-3">Desenvolvedor Java</h4>
-                    <p class="mb-0">Bootcamp</p>
-                </div>
-                <div class="col-md-4 mx-0 mt-2 pr-3 d-flex align-self-center justify-content-end ">
-                        <button class="btn btn-info mr-3">Editar</button>
-                        <button class="btn btn-danger">Apagar</button>
-                </div>
-            </div>
-            <hr>
-            <div class="row  ml-3 mx-0">
-                <div class="col-md-12 p-0 ">
-                    <p class="text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum cupiditate animi
-                        aut quis a quae,
-                        molestias voluptatum ex. Repellendus dolor sequi a voluptates pariatur maxime quae porro officia
-                        fugiat perspiciatis?</p>
-                    <p class="text-right pr-3"><small>postado em 27/01/2021</small></p>
-                </div>
-
-            </div>
-
+  <!-- feed de postagem -->
+  <hr class="mt-5">
+  <h4 class="text-center text-white  my-5" style="text-shadow: 2px 2px 4px #000000;">Feed de postagens</h4>
+  <div class="row d-flex justify-content-center mb-5" *ngFor= 'let item of listaPostagens'>
+    <div class="col-md-9 bg-white" id="formularioPostagem" style="padding-left: 64px; padding-right: 64px;">
+      <div class="row">
+        <div class="col-md-8 text-left pl-3 pr-0 ">
+          <h4 class="mt-3">{{item.titulo}}</h4>
+          <p class="mb-0">{{item.tema}}</p>
         </div>
-    </div>
+      </div>
+      <hr>
+      <div class="row  ml-3 mx-0">
+        <div class="col-md-12 p-0 ">
+          <p class="text-left">{{item.conteudoPostagem}}</p>
+          <p><small>Autor: {{item.instituicaoObj.nome}}</small></p>
+          <p class="text-right pr-3"><small>
+            Postado em {{item.dataCriacaoPostagem | date: 'dd/MM/yyyy'}} às {{item.dataCriacaoPostagem | date: 'HH:mm'}}
+          </small></p>
+        </div>
 
-    <div class="row d-flex justify-content-center mt-5 pb-5">
-        <button>Carregar mais...</button>
+      </div>
+
     </div>
+  </div>
+
+  <div class="row d-flex justify-content-center mt-5 pb-5">
+    <button>Carregar mais...</button>
+  </div>
+    <!-- /feed de postagem -->
 </div>
+
