--- a/FrontEnd/ConectaMais/src/app/minhas-postagens/minhas-postagens.component.css
+++ b/FrontEnd/ConectaMais/src/app/minhas-postagens/minhas-postagens.component.css
@@ -1,4 +1,3 @@
-
 #criarPost{
     background-color: #FF914D;
     color: white;
@@ -43,7 +42,7 @@
     border-radius: 20px;
   }
   
-  #padrao {
+  #padrao1 {
     background-image: url("/assets/img/padrao.png");
     background-repeat: no-repeat;
     background-size: 100%;
@@ -51,3 +50,12 @@
     width: auto;
     height: max-content;
   }
+
+    #padrao2 {
+       background-image: url("/assets/img/padrao2.png");
+       background-repeat: no-repeat;
+       background-size: 100%;
+       background-position: bottom;
+       width: auto;
+       height: max-content;
+    }
