--- a/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
+++ b/FrontEnd/ConectaMais/src/app/pag-inicial/pag-inicial.component.html
@@ -2,13 +2,12 @@
   <div class="secao01">
     <!-- texto_chamada -->
     <div class="container m-0 ml-5 pb-5" style="padding-top: 23%;">
-      <p class="w-50 fw-bold fs-65 m-0 mb-4" style="line-height: 100%;  text-shadow: 2px 2px 4px #000000;">
+      <p class="w-50 fw-bold fs-65 m-0 mb-4 fade-in" style="line-height: 100%;  text-shadow: 2px 2px 4px #000000;">
         Se conecte ainda mais<br>à Tecnologia</p>
-      <p class="w-75 fw-bold fs-16 m-0" style="text-shadow: 2px 2px 4px #000000;">Você quer aprender
+      <p class="w-75 fw-bold fs-16 m-0 fade-in" style="text-shadow: 2px 2px 4px #000000;">Você quer aprender
         a programar, mas não sabe por onde começar.
         <br> O Cenecta+ te ajuda! Busque por programas, bootcamps e hackathons.<br>Mais oportunidades ao alcance de
-        todos!
-        Venha construir novas conexões!</p>
+        todos! Venha construir novas conexões!</p>
       <div class="m-0 mt-4">
         <a class="btn btn-outline-secondary mr-3 p-2" role="button" routerLink='/conheca'>CONHEÇA AS INSTITUIÇÕES</a>
         <a class="btn btn-outline-secondary p-2" href="/apoie" role="button"><span
