--- a/FrontEnd/ConectaMais/src/app/feed/feed.component.html
+++ b/FrontEnd/ConectaMais/src/app/feed/feed.component.html
@@ -1,11 +1,15 @@
 <div class="container-fluid" id="padrao1">
   <!-- formulario de publicação -->
-  <h4 class="text-center text-white  mb-5" style="padding-top: 135px; text-shadow: 2px 2px 4px #000000;">Faça uma
-    postagem para que os estudantes te encontrem.</h4>
+  <h4 class="text-center text-white mb-5 text-uppercase" style="padding-top: 135px; text-shadow: 2px 2px 4px #000000;"
+    *ngIf="showMsg1">Faça uma postagem para que os estudantes te encontrem.</h4>
+
+  <h4 *ngIf="showMsg2" class="text-center text-white mb-5 text-uppercase"
+    style="padding-top: 135px; text-shadow: 2px 2px 4px #000000;">Faça um
+    comentario e interaja com suas instituições favoritas.</h4>
 
   <p class="text-center">
     <button class="btn" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false"
-      aria-controls="collapseExample" id="criarPost">
+      aria-controls="collapseExample" id="criarPost" *ngIf="showMsg1">
       Criar nova postagem
     </button>
   </p>
@@ -19,17 +23,18 @@
           <label for="tema">Tema</label>
           <select (change)='temaSelect($event)' class="form-control" name="tema" id="tema">
             <option></option>
-            <option value="programa">Programa</option>
-            <option value="bootcamp">Bootcamp</option>
-            <option value="hackaton">Hackaton</option>
-            <option value="evento">Evento</option>
-            <option value="noticia">Noticia</option>
+            <option value="Programa">Programa</option>
+            <option value="Bootcamp">Bootcamp</option>
+            <option value="Hackaton">Hackaton</option>
+            <option value="Evento">Evento</option>
+            <option value="Notícia">Notícia</option>
           </select>
-          <label for="descricao" class="">Descrição</label>
+          <label for="descricao" class="">Conteudo de postagem:</label>
           <textarea [(ngModel)]='postagem.conteudoPostagem' class="form-control mb-3" name="descricao" id="descricao"
             rows="5"></textarea>
           <div class="row d-flex justify-content-end m-0">
-            <button (click)='publicar()' class="button button1">Publicar</button>
+            <button (click)='publicar()' class="button button1" data-toggle="collapse" data-target="#collapseExample"
+              aria-expanded="false" aria-controls="collapseExample">Publicar</button>
           </div>
         </div>
 
@@ -40,13 +45,13 @@
 
   <!-- feed de postagem -->
   <hr class="mt-5">
-  <h4 class="text-center text-white  my-5" style="text-shadow: 2px 2px 4px #000000;">Feed de postagens</h4>
+  <h4 class="text-center text-white my-5" style="text-shadow: 2px 2px 4px #000000;">Feed de postagens</h4>
   <div class="row d-flex justify-content-center mb-5" *ngFor='let item of listaPostagens'>
     <div class="col-md-9 bg-white" id="formularioPostagem" style="padding-left: 64px; padding-right: 64px;">
       <div class="row">
         <div class="col-md-8 text-left pl-3 pr-0 ">
           <h4 class="mt-3">{{item.titulo}}</h4>
-          <p class="mb-0">{{item.tema}}</p>
+          <p class="mb-0"><b>{{item.tema}}</b></p>
 
         </div>
       </div>
@@ -54,25 +59,36 @@
       <div class="row  ml-3 mx-0">
         <div class="col-md-12 p-0 ">
           <p class="text-left">{{item.conteudoPostagem}}</p>
-          <p><small>Autor: {{item.instituicaoObj.nome}}</small></p>
-          <p class="text-right pr-3"><small>
-              Postado em {{item.dataCriacaoPostagem | date: 'dd/MM/yyyy'}} às
+          <p class="pr-3 d-flex justify-content-between">
+            <small class="text-left"> <b>Autor@: {{item.instituicaoObj.nome}}</b></small>
+            <small class="text-right">Postado em {{item.dataCriacaoPostagem | date: 'dd/MM/yyyy'}} às
               {{item.dataCriacaoPostagem | date: 'HH:mm'}}
-            </small></p>
+            </small>
+          </p>
+          <p><a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button"
+              aria-expanded="false" aria-controls="collapseExample">
+              Comentarios
+            </a></p>
+          <div class="collapse" id="collapseExample">
+            <div class="card card-body">
+              Some placeholder content for the collapse component. This panel is hidden by default but revealed when
+              the user activates the relevant trigger.
+            </div>
+            <p class="pr-3 d-flex justify-content-between">
+              <small class="text-left"> <b>Autor@: Fulano</b></small>
+              <small class="text-right">Postado em xxxxxx às xxxx</small>
+            </p>
+          </div>
         </div>
 
       </div>
+    </div>
+
+    <div class="row d-flex justify-content-center mt-5 pb-5">
+      <button>Carregar mais...</button>
+    </div>
+    <!-- /feed de postagem -->
+    <div class="position-fixed-bottom" style="height:450px;" id="padrao2">
 
     </div>
   </div>
-
-  <div class="row d-flex justify-content-center mt-5 pb-5">
-    <button>Carregar mais...</button>
-  </div>
-  <!-- /feed de postagem -->
-  <div class="position-fixed-bottom" style="height:450px;" id="padrao2">
-
-  </div>
-</div>
-
-
