--- a/FrontEnd/ConectaMais/src/app/minhas-postagens/minhas-postagens.component.html
+++ b/FrontEnd/ConectaMais/src/app/minhas-postagens/minhas-postagens.component.html
@@ -28,14 +28,13 @@
 
       </div>
     </div>
-
-    <div class="row d-flex justify-content-center mt-5 pb-5">
-      <button>Carregar mais...</button>
-    </div>
-    <!-- /minhas postagens -->
-    <div class="position-fixed-bottom" style="height: 450px;" id="padrao2">
-    </div>
   </div>
+
+  <div class="row d-flex justify-content-center mt-5 pb-5">
+    <button>Carregar mais...</button>
+  </div>
+  <!-- /minhas postagens -->
+  <div class="position-fixed-bottom" style="height: 450px;" id="padrao2"></div>
 
 
 
@@ -112,3 +111,4 @@
     </div>
   </div>
   <!-- /Modal apagar -->
+</div>
