--- a/FrontEnd/ConectaMais/src/app/menu-usuario/menu-usuario.component.html
+++ b/FrontEnd/ConectaMais/src/app/menu-usuario/menu-usuario.component.html
@@ -7,7 +7,8 @@
 
       <ul class="nav flex-column pb-4 align-items-center" style="background-color: #1B3659;">
         <li class="nav-item px-0">
-          <a href="#" class="nav-link text-white text-uppercase my-1">Perfil</a>
+          <a (click)="irMeuPerfil()" [routerLink]="['/feed', idUser]" type="button"
+            class="nav-link text-white text-uppercase my-1">Meu perfil</a>
         </li>
         <li class="nav-item px-0">
           <a (click)="irMinhasPost()" type="button" class="nav-link text-white text-uppercase my-1"
@@ -59,5 +60,6 @@
 
     <app-feed *ngIf="showFeed"></app-feed>
     <app-minhas-postagens *ngIf="showMyPost"></app-minhas-postagens>
+    <app-perfil *ngIf="showMyProfile"></app-perfil>
   </div>
 </body>
