--- a/FrontEnd/ConectaMais/src/app/feed/feed.component.html
+++ b/FrontEnd/ConectaMais/src/app/feed/feed.component.html
@@ -78,18 +78,49 @@
                   {{item.dataCriacaoComentario | date: 'HH:mm'}}</small>
               </p>
             </div>
+            <div>
+              <button (click)='findByIdPostagem(item.postagemID)' class="btn rounded-circle" id="edit"
+                data-toggle="modal" data-target="#comentarPostagem"><i class="fas fa-comment-dots"></i></button>
+            </div>
           </div>
         </div>
       </div>
-      <div class="input-group mb-3">
+      <!-- <div class="input-group mb-3">
         <input [(ngModel)]="comentario.conteudoComentario" (blur)="findByPostagemId(item.postagemID)" type="text"
           class="form-control" placeholder="Adicione um comentário...">
         <div class="input-group-append">
           <button (click)='comentar()' class="btn">Comentar</button>
         </div>
+      </div> -->
+    </div>
+  </div>
+
+  <!-- Modal comentar -->
+  <div class="modal fade" id="comentarPostagem" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="TituloModalCentralizado">Adicione um comentário</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <!-- <label for="texto">Contéudo:</label> -->
+            <textarea [(ngModel)]='comentario.conteudoComentario' class="form-control" name="texto" id="texto"
+              rows="3" placeholder="Adicione um comentario"></textarea>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button (click)='comentar()' type="button" class="btn btn-info " data-dismiss="modal">Comentar</button>
+          <button type="button" class="btn btn-danger mr-4" data-dismiss="modal">Cancelar</button>
+        </div>
       </div>
     </div>
-  </div> 
+  </div>
+  <!-- /Modal comentar -->
 
 
   <div class="row d-flex justify-content-center mt-5 pb-5">
@@ -99,3 +130,6 @@
   <!-- /feed de postagem -->
   <div class="position-fixed-bottom" style="height:350px;" id="padrao2"></div>
 </div>
+
+
+
