--- a/FrontEnd/ConectaMais/src/app/feed/feed.component.html
+++ b/FrontEnd/ConectaMais/src/app/feed/feed.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0" id="padrao1">
+<div class="container-fluid p-0 m-0" id="padrao1">
   <!-- formulario de publicação -->
   <h4 *ngIf="showMsg1" class="text-center text-white mb-5 text-uppercase"
     style="padding-top: 135px; text-shadow: 2px 2px 4px #000000;">Faça uma
@@ -123,12 +123,12 @@
   <!-- /Modal comentar -->
 
 
-  <div class="row d-flex justify-content-center mt-5 pb-5">
+  <div class="row d-flex justify-content-center pt-5 pb-5 m-0">
     <button>Carregar mais...</button>
   </div>
 
   <!-- /feed de postagem -->
-  <div class="position-fixed-bottom" style="height:350px;" id="padrao2"></div>
+  <div class="position-fixed-bottom m-0" style="height:350px;" id="padrao2"></div>
 </div>
 
 
