--- a/FrontEnd/ConectaMais/src/app/minhas-postagens/minhas-postagens.component.html
+++ b/FrontEnd/ConectaMais/src/app/minhas-postagens/minhas-postagens.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0" id="padrao1">
+<div class="container-fluid p-0 m-0" id="padrao1">
   <!-- minhas postagem -->
   <h4 class="text-center text-white mt-0 py-5" style="text-shadow: 2px 2px 4px #000000;">Minhas postagens</h4>
   <div class="row d-flex justify-content-center mb-5" *ngFor='let item of usuario.postagemObj'>
@@ -25,11 +25,11 @@
     </div>
   </div>
 
-  <div class="row d-flex justify-content-center mt-5 pb-5">
+  <div class="row d-flex justify-content-center pt-5 pb-5 m-0">
     <button>Carregar mais...</button>
   </div>
   <!-- /minhas postagens -->
-  <div class="position-fixed-bottom" style="height: 350px;" id="padrao2"></div>
+  <div class="position-fixed-bottom" style="height: 400px;" id="padrao2"></div>
 
 
 
