--- a/FrontEnd/ConectaMais/src/app/perfil/perfil.component.html
+++ b/FrontEnd/ConectaMais/src/app/perfil/perfil.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-0" id="padrao1">
+<div class="container-fluid p-0 m-0" id="padrao1">
 
 
   <div class="row">
@@ -92,6 +92,6 @@
     </div>
   </div>
 
-  <div class="position-fixed-bottom" style="height: 350px;" id="padrao2"></div>
+  <div class="position-fixed-bottom m-0" style="height: 350px;" id="padrao2"></div>
 
 </div>
