--- a/FrontEnd/ConectaMais/src/app/perfil/perfil.component.html
+++ b/FrontEnd/ConectaMais/src/app/perfil/perfil.component.html
@@ -77,12 +77,12 @@
           <div class="form-group was-validated">
             <label for="senha" class="d-flex ">Senha:</label>
             <input (input)="confirmSenha($event)" class="form-control" type="password" name="senha " id="senha"
-              placeholder="Sua senha" required>
+              placeholder="Digite a nova senha ou deixe em branco para continuar a mesma">
           </div>
           <div class="form-group was-validated">
             <label for="confirmSenha" class="d-flex ">Confirme sua senha:</label>
-            <input [(ngModel)]="usuario.senha" class="form-control" type="password" name="confirmSenha "
-              id="confirmSenha" placeholder="Repita a senha" required>
+            <input [(ngModel)]="senhaUser" class="form-control" type="password" name="confirmSenha "
+              id="confirmSenha" placeholder="Repita a nova senha se for atualiza-lá">
           </div>
           <div class="d-flex justify-content-end pb-5">
             <button (click)="atualizar()" type="submit" class="btn btn-success style-button">Atualizar</button>
